k8s/domains/accounts/infra/worker/base/accounts-worker-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: accounts-worker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-worker
  template:
    metadata:
      labels:
        app: accounts-worker
    spec:
      terminationGracePeriodSeconds: 15
      serviceAccountName: accounts-worker
      # Defense in deep, disable this at the pod level
      # to prevent overwrites at the service account level
      automountServiceAccountToken: false

      containers:
        - name: accounts-worker
          image: mdstaicu/accounts-worker
