k8s/domains/accounts/infra/worker/base/accounts-worker-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: accounts-worker
spec:
  podSelector:
    matchLabels:
      app: accounts-worker
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app: accounts-postgres
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nats
          podSelector:
            matchLabels:
              app: nats
      ports:
        - protocol: TCP
          port: 4222
